--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav>
-      <img src="assets/logo.png" alt="ALPiOmega Logo" class="logo" />
+      <img src="logoalpiomegafitnessbrand.png" alt="ALPiOmega Logo" class="logo" />
       <ul class="nav-links">
         <li><a href="#about">About Us</a></li>
         <li><a href="#blog">Blog</a></li>
