--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ALPiOmega Fitness</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
 </head>
@@ -21,12 +22,17 @@
   </header>
 
   <main>
-    <section id="about">
-      <h1>About Us</h1>
-      <p>Placeholder for your About Us content.</p>
-    </section>
-
-    <section id="blog">
+    <!-- ABOUT US SECTION -->
+<section id="about" class="about-hero">
+  <img src="assets/gym-promo.png" alt="About ALPiOmega" class="about-background" />
+  <div class="about-overlay">
+    <h1>Welcome to ALPiOmega</h1>
+    <p>
+      We help you build your body, mind, and discipline — no fluff, just real progress. This is where personal development meets fitness.
+    </p>
+  </div>
+</section>
+<section id="blog">
       <h2>Latest Blog Posts</h2>
       <div class="blog-grid">
         <div class="blog-tile">
