--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ALPiOmega Fitness</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/logo.png" type="image/png" />
+  <link rel="icon" href="assets/logoalpiomegafitnessbrand.png" type="image/png" />
 </head>
 <body>
   <header>
