--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <h2>Latest Blog Posts</h2>
       <div class="blog-grid">
         <div class="blog-tile">
-          <img src="https://via.placeholder.com/300x200" alt="Post 1" />
-          <h3>Post Title 1</h3>
-          <p>Short excerpt for post 1.</p>
+          <img src="assets/fearandhope.png" alt="ALPiOmega Workout Launch" />
+          <h3>Fear and Hope</h3>
+          <p></p>
         </div>
         <div class="blog-tile">
-          <img src="https://via.placeholder.com/300x200" alt="Post 2" />
+          <img src="assets/colorwaves.png" alt="ALPiOmega Nutrition Tips" />
           <h3>Post Title 2</h3>
-          <p>Short excerpt for post 2.</p>
+          <p></p>
         </div>
         <div class="blog-tile">
           <img src="https://via.placeholder.com/300x200" alt="Post 3" />
