--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <p></p>
         </div>
         <div class="blog-tile">
-          <img src="https://via.placeholder.com/300x200" alt="Post 3" />
+          <img src="assets/schwartzwheel.png" alt="ALPiOmega Recovery Guide" />
           <h3>Post Title 3</h3>
-          <p>Short excerpt for post 3.</p>
+          <p></p>
         </div>
       </div>
       <a href="/blog.html" class="more-posts-button">More Posts</a>
