--- a/index.html
+++ b/index.html
@@ -34,24 +34,33 @@
 </section>
 <section id="blog">
       <h2>Latest Blog Posts</h2>
-      <div class="blog-grid">
-        <div class="blog-tile">
-          <img src="assets/fearandhope.png" alt="ALPiOmega Workout Launch" />
-          <h3>Fear and Hope</h3>
-          <p></p>
-        </div>
-        <div class="blog-tile">
-          <img src="assets/colorwaves.png" alt="ALPiOmega Nutrition Tips" />
-          <h3>Post Title 2</h3>
-          <p></p>
-        </div>
-        <div class="blog-tile">
-          <img src="assets/schwartzwheel.png" alt="ALPiOmega Recovery Guide" />
-          <h3>Post Title 3</h3>
-          <p></p>
-        </div>
-      </div>
-      <a href="/blog.html" class="more-posts-button">More Posts</a>
+<div class="tiles">
+  <div class="tile">
+    <a href="blog/fear-and-hope.html">
+      <img src="assets/fearandope.png" alt="Fear and Hope">
+      <h3>Fear and Hope</h3>
+    </a>
+  </div>
+
+  <div class="tile">
+    <a href="blog/energy-of-color.html">
+      <img src="assets/colorwaves.png" alt="Post Title 2">
+      <h3>Post Title 2</h3>
+    </a>
+  </div>
+
+  <div class="tile">
+    <a href="blog/What-are-your-values.html">
+      <img src="assets/schwartzwheel.png" alt="What are your Values?">
+      <h3>What Are Your Values?</h3>
+    </a>
+  </div>
+</div>
+
+<!-- More Posts button just scrolls down to older content on same page -->
+<a href="#more-posts" class="more-posts-btn">More Posts</a>
+
+      <a href="/blog" class="more-posts-button">More Posts</a>
     </section>
 
     <section id="workouts">
