--- a/index.html
+++ b/index.html
@@ -33,35 +33,31 @@
   </div>
 </section>
 <section id="blog">
-      <h2>Latest Blog Posts</h2>
-<div class="tiles">
-  <div class="tile">
-    <a href="blog/fear-and-hope.html">
-      <img src="assets/fearandope.png" alt="Fear and Hope">
+  <h2>Latest Blog Posts</h2>
+  <div class="blog-grid">
+    
+    <a href="blog/fear-and-hope.html" class="blog-tile">
+      <img src="assets/fearandhope.png" alt="Fear and Hope" />
       <h3>Fear and Hope</h3>
+      <p>Explore the tension between fear and purpose in personal growth.</p>
     </a>
-  </div>
 
-  <div class="tile">
-    <a href="blog/energy-of-color.html">
-      <img src="assets/colorwaves.png" alt="Post Title 2">
+    <a href="blog/energy-of-color.html" class="blog-tile">
+      <img src="assets/colorwaves.png" alt="Post Title 2" />
       <h3>Post Title 2</h3>
+      <p>Discover how color and mindset play a role in your daily drive.</p>
     </a>
-  </div>
 
-  <div class="tile">
-    <a href="blog/What-are-your-values.html">
-      <img src="assets/schwartzwheel.png" alt="What are your Values?">
+    <a href="blog/what-are-your-values.html" class="blog-tile">
+      <img src="assets/schwartzwheel.png" alt="What Are Your Values?" />
       <h3>What Are Your Values?</h3>
+      <p>A quick look at the values that guide decision-making and growth.</p>
     </a>
+
   </div>
-</div>
 
-<!-- More Posts button just scrolls down to older content on same page -->
-<a href="#more-posts" class="more-posts-btn">More Posts</a>
-
-      <a href="/blog" class="more-posts-button">More Posts</a>
-    </section>
+  <a href="/blog" class="more-posts-button">More Posts</a>
+</section>
 
     <section id="workouts">
       <h2>Workouts</h2>
