--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-      <img src="logoalpiomegafitnessbrand.png" alt="ALPiOmega Logo" class="main-logo" />
+      <img src="logoalpiomegafitnessbrand.png" alt="ALPiOmega Logo" class="logo" />
       <nav>
       <ul class="nav-links">
         <li><a href="#about">About Us</a></li>
