--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <p>Explore the tension between fear and purpose in personal growth.</p>
     </a>
 
-    <a href="blog/energy-of-color.html" class="blog-tile">
-      <img src="assets/colorwaves.png" alt="Post Title 2" />
-      <h3>Post Title 2</h3>
-      <p>Discover how color and mindset play a role in your daily drive.</p>
+    <a href="blog/Move-your-body.html" class="blog-tile">
+      <img src="assets/colorwaves.png" alt="Move Your Body, Move Your Soul" />
+      <h3>Move Your Body, Move Your Soul</h3>
+      <p>Movement isn’t just physical—it’s emotional, spiritual, and deeply healing.</p>
     </a>
 
     <a href="blog/what-are-your-values.html" class="blog-tile">
