--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>Explore the tension between fear and purpose in personal growth.</p>
     </a>
 
-    <a href="blog/Move-your-body.html" class="blog-tile">
+    <a href="blog/Move-Your-Body.html" class="blog-tile">
       <img src="assets/colorwaves.png" alt="Move Your Body, Move Your Soul" />
       <h3>Move Your Body, Move Your Soul</h3>
       <p>Movement isn’t just physical—it’s emotional, spiritual, and deeply healing.</p>
