--- a/index.html
+++ b/index.html
@@ -59,10 +59,44 @@
   <a href="/blog" class="more-posts-button">More Posts</a>
 </section>
 
-    <section id="workouts">
-      <h2>Workouts</h2>
-      <p>Placeholder for workouts section.</p>
-    </section>
+    <section id="workouts" class="workouts-section">
+  <h2>Workouts</h2>
+
+  <div class="workout-grid">
+    <a href="workouts/shoulders.html" class="workout-tile">
+      <img src="assets/shoulders.png" alt="Shoulders" />
+      <h3>Shoulders</h3>
+    </a>
+    <a href="workouts/chest.html" class="workout-tile">
+      <img src="assets/chest.png" alt="Chest" />
+      <h3>Chest</h3>
+    </a>
+    <a href="workouts/back.html" class="workout-tile">
+      <img src="assets/back.png" alt="Back" />
+      <h3>Back</h3>
+    </a>
+
+    <a href="workouts/arms.html" class="workout-tile">
+      <img src="assets/arms.png" alt="Arms" />
+      <h3>Arms</h3>
+    </a>
+    <a href="workouts/abs.html" class="workout-tile">
+      <img src="assets/abs.png" alt="Abs" />
+      <h3>Abs</h3>
+    </a>
+    <a href="workouts/glutes.html" class="workout-tile">
+      <img src="assets/glutes.png" alt="Glutes" />
+      <h3>Glutes</h3>
+    </a>
+  </div>
+
+  <div class="workout-grid center-tile">
+    <a href="workouts/legs.html" class="workout-tile">
+      <img src="assets/legs.png" alt="Legs" />
+      <h3>Legs</h3>
+    </a>
+  </div>
+</section>
 
     <section id="programs">
       <h2>Programs</h2>
