--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
   </div>
 </section>
 
-    <section id="programs">
-      <h2>Programs</h2>
-      <p>Placeholder for programs section.</p>
-    </section>
+    <section id="programs" class="programs-coming-soon">
+  <img src="assets/fitnesscomingsoon.png" alt="Fitness Coming Soon" />
+</section>
+
   </main>
 
   <footer>
-    <p>&copy; 2025 ALPiOmega Fitness</p>
+    <p>&copy; 2025 ALPiOmega Fitness by AlPiOmega Freelance by ACR</p>
   </footer>
 
   <script src="script.js"></script>
