--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
 </section>
 
     <section id="programs" class="programs-coming-soon">
+  <h2>Programs</h2>
   <img src="assets/fitnesscomingsoon.png" alt="Fitness Coming Soon" />
 </section>
+
 
   </main>
 
