--- a/workouts/shoulders.html
+++ b/workouts/shoulders.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shoulder Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Shoulder Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/arnoldpress.png" alt="Arnold Press" />
+      <img src="../assets/facepullrope.png" alt="Rope Face Pulls" />
+      <img src="../assets/lateralraises.png" alt="Lateral Raises" />
+      <img src="../assets/overheadpress.png" alt="Overhead Press" />
+      <img src="../assets/reardeltfly.png" alt="Rear Delt Fly" />
+    </div>
+  </main>
+</body>
+</html>
 
