--- a/workouts/chest.html
+++ b/workouts/chest.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chest Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Chest Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/cableflys.png" alt="Cable Flys" />
+      <img src="../assets/inclinebenchpress.png" alt="Incline Bench Press" />
+      <img src="../assets/benchpress.png" alt="Bench Press" />
+    </div>
+  </main>
+</body>
+</html>
 
