--- a/workouts/back.html
+++ b/workouts/back.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Back Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Back Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/latpulldown.png" alt="Lat Pulldown" />
+      <img src="../assets/pullups.png" alt="Pull-ups" />
+      <img src="../assets/rows.png" alt="Rows" />
+    </div>
+  </main>
+</body>
+</html>
 
