--- a/workouts/arms.html
+++ b/workouts/arms.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Arm Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Arm Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/bicepcurl.png" alt="Bicep Curl" />
+      <img src="../assets/cablepulldown.png" alt="Cable Pull Down" />
+      <img src="../assets/dips.png" alt="Triceps Dips" />
+      <img src="../assets/hammercurl.png" alt="Hammer Curl" />
+    </div>
+  </main>
+</body>
+</html>
 
