--- a/workouts/abs.html
+++ b/workouts/abs.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ab Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Ab Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/bicycles.png" alt="Bicycle Crunches" />
+      <img src="../assets/legraises.png" alt="Hanging Leg Raises" />
+      <img src="../assets/plank.png" alt="Plank" />
+      <img src="../assets/russiantwist.png" alt="Russian Twist" />
+    </div>
+  </main>
+</body>
+</html>
 
