--- a/workouts/glutes.html
+++ b/workouts/glutes.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Glute Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Glute Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/bulgariansplitsquat.png" alt="Bulgarian Split Squat" />
+      <img src="../assets/deadlift.png" alt="Deadlift" />
+      <img src="../assets/hipthrust.png" alt="Hip Thrust" />
+    </div>
+  </main>
+</body>
+</html>
 
