--- a/workouts/legs.html
+++ b/workouts/legs.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Leg Workouts</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <main class="workout-detail">
+    <h1>Leg Workouts</h1>
+
+    <div class="workout-images">
+      <img src="../assets/calfraise.png" alt="Calf Raises" />
+      <img src="../assets/squat.png" alt="Squat" />
+    </div>
+  </main>
+</body>
+</html>
 
