--- a/workouts/legs.html
+++ b/workouts/legs.html
@@ -15,6 +15,9 @@
       <img src="../assets/calfraise.png" alt="Calf Raises" />
       <img src="../assets/squat.png" alt="Squat" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
