--- a/workouts/shoulders.html
+++ b/workouts/shoulders.html
@@ -18,6 +18,9 @@
       <img src="../assets/overheadpress.png" alt="Overhead Press" />
       <img src="../assets/reardeltfly.png" alt="Rear Delt Fly" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
