--- a/workouts/glutes.html
+++ b/workouts/glutes.html
@@ -16,6 +16,9 @@
       <img src="../assets/deadlift.png" alt="Deadlift" />
       <img src="../assets/hipthrust.png" alt="Hip Thrust" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
