--- a/workouts/chest.html
+++ b/workouts/chest.html
@@ -16,6 +16,9 @@
       <img src="../assets/inclinebenchpress.png" alt="Incline Bench Press" />
       <img src="../assets/benchpress.png" alt="Bench Press" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
