--- a/workouts/back.html
+++ b/workouts/back.html
@@ -16,6 +16,9 @@
       <img src="../assets/pullups.png" alt="Pull-ups" />
       <img src="../assets/rows.png" alt="Rows" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
