--- a/workouts/arms.html
+++ b/workouts/arms.html
@@ -17,6 +17,9 @@
       <img src="../assets/dips.png" alt="Triceps Dips" />
       <img src="../assets/hammercurl.png" alt="Hammer Curl" />
     </div>
+    <div class="back-button">
+  <a href="../index.html#workouts">← Back to Workouts</a>
+</div>
   </main>
 </body>
 </html>
