--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <img src="logoalpiomegafitnessbrand.png" alt="ALPiOmega Logo" class="logo" />
       <nav>
       <ul class="nav-links">
-        <li><a href="#about">About Us</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#blog">Blog</a></li>
         <li><a href="#workouts">Workouts</a></li>
+          <li><a href="#contact">Contact</a></li>
         <li><a href="#programs">Programs</a></li>
       </ul>
     </nav>
@@ -103,6 +104,21 @@
   <img src="assets/fitnesscomingsoon.png" alt="Fitness Coming Soon" />
 </section>
 
+<section id="contact" class="contact-section">
+  <h2>Contact Me</h2>
+  <form action="https://formspree.io/f/mqalkzlz" method="POST">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" required>
+
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" required>
+
+    <label for="message">Message</label>
+    <textarea name="message" id="message" rows="5" required></textarea>
+
+    <button type="submit">Send</button>
+  </form>
+</section>
 
   </main>
 
