--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   </div>
 
-  <a href="/blog" class="more-posts-button">More Posts</a>
+<a href="blog.html" class="more-posts-button">More Posts</a>
 </section>
 
     <section id="workouts" class="workouts-section">
