--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 
   <footer>
     <p>&copy; 2025 ALPiOmega Fitness by AlPiOmega Freelance by ACR</p>
+    <div class="social-links">
+  <a href="https://www.instagram.com/alpiomega/" target="_blank" rel="noopener">Instagram</a>
+</div>
+
   </footer>
 
   <script src="script.js"></script>
