--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 <section id="about" class="about-hero">
   <img src="assets/gym-promo.png" alt="About ALPiOmega" class="about-background" />
   <div class="about-overlay">
-    <h1>Welcome to ALPiOmega</h1>
-    <p>
-      We help you build your body, mind, and discipline — no fluff, just real progress. This is where personal development meets fitness.
+    <h1>ALPiOmega</h1>
+    <p>I've often felt misunderstood—seen as the complete opposite of who I truly am. But at this point in my life, I'm no longer trying to change opinions. Instead, I'm here to share what I’ve learned.
+I care deeply about the world around me, and I genuinely want to see others succeed. I don't claim to know everything, but I'm passionate about growth—and I’ve committed myself to mental, physical, and spiritual development.
+Now, it’s time to lead by example. This space exists to share that journey—with honesty, intention, and purpose.
     </p>
   </div>
 </section>
