--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Now, it’s time to lead by example. This space exists to share that journey—w
 </section>
 
 <section id="contact" class="contact-section">
-  <h2>Contact Me</h2>
+  <h2>Contact Me for Personalized training, and nutrition plan based on your own stats!</h2>
   <form action="https://formspree.io/f/mqalkzlz" method="POST">
     <label for="name">Name</label>
     <input type="text" name="name" id="name" required>
