--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@ Now, it’s time to lead by example. This space exists to share that journey—w
       <p>Explore the tension between fear and purpose in personal growth.</p>
     </a>
 
-    <a href="blog/Move-Your-Body.html" class="blog-tile">
-      <img src="assets/colorwaves.png" alt="Move Your Body, Move Your Soul" />
-      <h3>Move Your Body, Move Your Soul</h3>
-      <p>Movement isn’t just physical—it’s emotional, spiritual, and deeply healing.</p>
-    </a>
+  <a href="blog/Gains-vs-Losses-Schedule-it.html" class="blog-tile">
+  <img src="assets/gainsvslosses.png" alt="Gains vs Losses" />
+  <div class="blog-tile-content">
+    <h2>Gains vs Losses, Schedule it</h2>
+    <p>Trying to gain muscle and lose fat at the same time? Here’s why it rarely works — and what to do instead for faster results.</p>
+  </div>
+</a>
+
 
     <a href="blog/what-are-your-values.html" class="blog-tile">
       <img src="assets/schwartzwheel.png" alt="What Are Your Values?" />
