--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ Now, it’s time to lead by example. This space exists to share that journey—w
 <section id="blog">
   <h2>Latest Blog Posts</h2>
   <div class="blog-grid">
+
+    <a href="blog/stoplabelingstartgrowing.html" class="blog-tile">
+  <img src="assets/manwomanpsy.png" alt="Stop Labeling, Start Growing" />
+  <div class="blog-tile-content">
+    <h2>Stop Labeling, Start Growing</h2>
+    <p>
+      When others judge your discipline as obsession, it's not about you — it's a mirror to their own unspoken struggles. Here's how to rise anyway.
+    </p>
+  </div>
+</a>
+
     
     <a href="blog/fear-and-hope.html" class="blog-tile">
       <img src="assets/fearandhope.png" alt="Fear and Hope" />
@@ -51,13 +62,6 @@ Now, it’s time to lead by example. This space exists to share that journey—w
     <p>Trying to gain muscle and lose fat at the same time? Here’s why it rarely works — and what to do instead for faster results.</p>
   </div>
 </a>
-
-
-    <a href="blog/What-are-your-values.html" class="blog-tile">
-      <img src="assets/schwartzwheel.png" alt="What Are Your Values?" />
-      <h3>What Are Your Values?</h3>
-      <p>A quick look at the values that guide decision-making and growth.</p>
-    </a>
 
   </div>
 
