--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@ Now, it’s time to lead by example. This space exists to share that journey—w
 </a>
 
     
-    <a href="blog/fear-and-hope.html" class="blog-tile">
-      <img src="assets/fearandhope.png" alt="Fear and Hope" />
-      <h3>Fear and Hope</h3>
-      <p>Explore the tension between fear and purpose in personal growth.</p>
-    </a>
+   <a href="tool-for-control.html" class="blog-tile">
+  <img src="../assets/toolforcontrol.png" alt="The Psychology of Fat Shaming" />
+  <h3>The Psychology of Fat Shaming</h3>
+  <p>A look at how the word "fat" became a tool of emotional regulation — and why shame only works if we let it.</p>
+</a>
+
 
   <a href="blog/Gains-vs-Losses-Schedule-it.html" class="blog-tile">
   <img src="assets/gainsvslosses.png" alt="Gains vs Losses" />
