--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Now, it’s time to lead by example. This space exists to share that journey—w
 </a>
 
     
-   <a href="tool-for-control.html" class="blog-tile">
+   <a href="blog/tool-for-control.html" class="blog-tile">
   <img src="../assets/toolforcontrol.png" alt="The Psychology of Fat Shaming" />
   <h3>The Psychology of Fat Shaming</h3>
   <p>A look at how the word "fat" became a tool of emotional regulation — and why shame only works if we let it.</p>
